--- a/src/main/resources/templates/bill.html
+++ b/src/main/resources/templates/bill.html
@@ -93,7 +93,7 @@
         <div class="grid grid-2">
             <div>
                 <p><strong>Name:</strong> <span th:text="${user.firstName + ' ' + user.lastName}"></span></p>
-                <p><strong>Email:</strong> <span th:text="${user.emailOrPhone}"></span></p>
+                <p><strong>Email:</strong> <span th:text="${user.email}"></span></p>
             </div>
             <div>
                 <p><strong>Address:</strong> <span th:text="${user.address}"></span></p>
